--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -10,4 +10,10 @@ html {
   
   h1, h2, h3, h4, h5, h6 {
     line-height: 1.4;
-  }  
+  }
+
+/* Set color of all Font Awesome icons in author and footer links */
+.page__footer .fa,
+.author__urls .fa {
+  color: #1e1e1e !important; /* Dark grey */
+}
