--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -5,10 +5,9 @@
 <link rel="icon" type="image/png" sizes="32x32" href="/favicon.ico">
 <link rel="icon" type="image/png" sizes="16x16" href="/favicon.ico">
 <link rel="shortcut icon" href="/favicon.ico">
+<link rel="manifest" href="/site.webmanifest">
 
-<!-- end favicons -->
-
-<!-- Custom CSS -->
-<link rel="stylesheet" href="/assets/css/custom.css">
+<!-- Custom CSS - Load after theme CSS -->
+<link rel="stylesheet" href="{{ '/assets/css/custom.css' | relative_url }}?v={{ site.time | date:'%s' }}">
 
 <!-- end custom head snippets -->
