--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -1,11 +1,8 @@
 <!-- start custom head snippets -->
 
 <!-- insert favicons -->
-<link rel="apple-touch-icon" sizes="180x180" href="/favicon.ico">
-<link rel="icon" type="image/png" sizes="32x32" href="/favicon.ico">
-<link rel="icon" type="image/png" sizes="16x16" href="/favicon.ico">
-<link rel="shortcut icon" href="/favicon.ico">
-<link rel="manifest" href="/site.webmanifest">
+<link rel="shortcut icon" href="{{ site.baseurl }}/favicon.ico" type="image/x-icon">
+<link rel="icon" href="{{ site.baseurl }}/favicon.ico" type="image/x-icon">
 
 <!-- Custom CSS - Load after theme CSS -->
 <link rel="stylesheet" href="{{ '/assets/css/custom.css' | relative_url }}?v={{ site.time | date:'%s' }}">
