--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -1,8 +1,10 @@
 <!-- start custom head snippets -->
 
-<!-- insert favicons -->
-<link rel="shortcut icon" href="{{ site.baseurl }}/favicon.ico" type="image/x-icon">
-<link rel="icon" href="{{ site.baseurl }}/favicon.ico" type="image/x-icon">
+<!-- Favicon tags -->
+<link rel="icon" type="image/x-icon" href="/favicon.ico">
+<link rel="icon" type="image/png" href="/favicon.ico">
+<meta name="msapplication-TileImage" content="/favicon.ico">
+<meta name="theme-color" content="#ffffff">
 
 <!-- Custom CSS - Load after theme CSS -->
 <link rel="stylesheet" href="{{ '/assets/css/custom.css' | relative_url }}?v={{ site.time | date:'%s' }}">
