--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -1,10 +1,8 @@
 <!-- start custom head snippets -->
 
-<!-- Favicon tags -->
+<!-- Basic favicon -->
+<link rel="icon" href="/favicon.ico" sizes="any">
 <link rel="icon" type="image/x-icon" href="/favicon.ico">
-<link rel="icon" type="image/png" href="/favicon.ico">
-<meta name="msapplication-TileImage" content="/favicon.ico">
-<meta name="theme-color" content="#ffffff">
 
 <!-- Custom CSS - Load after theme CSS -->
 <link rel="stylesheet" href="{{ '/assets/css/custom.css' | relative_url }}?v={{ site.time | date:'%s' }}">
