--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -9,7 +9,7 @@ body {
   line-height: 1.5;
 }
 
-h1 { font-size: 2rem; }    /* Make headings larger */
+h1 { font-size: 2rem; }
 h2 { font-size: 1.8rem; }
 h3 { font-size: 1.6rem; }
 h4 { font-size: 1.4rem; }
