--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -33,6 +33,10 @@ h4 { font-size: 1.4rem; }
   color: #003335 !important;
 }
 
+.page__footer{
+  background-color: azure;
+}
+
 /* Add hover effect for social icons
 .social-icons a:hover {
   transform: scale(1.02);
