--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -35,6 +35,7 @@ h4 { font-size: 1.4rem; }
 
 .page__footer{
   background-color: azure;
+  height: 20px;
 }
 
 /* Add hover effect for social icons
