--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -30,12 +30,11 @@ h4 { font-size: 1.4rem; }
 }
 
 .page__footer .social-icons a {
-  color: #003335 !important;
+  color: #ffffff !important;
 }
 
 .page__footer{
-  background-color: azure;
-  height: 20px;
+  background-color: #11999e;
 }
 
 /* Add hover effect for social icons
