--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -26,7 +26,7 @@ h4 { font-size: 1.4rem; }
 
 /* Ensure icon colors in specific locations */
 .author__urls.social-icons a{
-  color: #048b90 !important;
+  color: #ffffff !important;
 }
 
 .page__footer .social-icons a {
