--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -8,8 +8,8 @@
 <!-- Open Graph -->
 <meta property="og:title" content="{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}">
 <meta property="og:description" content="{% if page.description %}{{ page.description }}{% else %}{{ site.description }}{% endif %}">
-<meta property="og:image" content="{{ site.url | absolute_url }}{{ site.teaser | remove_first: '/' }}">
-<meta property="og:url" content="{{ page.url | replace:'index.html','' | absolute_url }}">
+<meta property="og:image" content="https://byahmedali.github.io/assets/images/preview.png">
+<meta property="og:url" content="{{ site.url }}{{ page.url | replace:'index.html','' }}">
 <meta property="og:type" content="website">
 <meta property="og:image:width" content="1200">
 <meta property="og:image:height" content="630">
@@ -18,7 +18,7 @@
 <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:title" content="{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}">
 <meta name="twitter:description" content="{% if page.description %}{{ page.description }}{% else %}{{ site.description }}{% endif %}">
-<meta name="twitter:image" content="{{ site.url | absolute_url }}{{ site.teaser | remove_first: '/' }}">
+<meta name="twitter:image" content="https://byahmedali.github.io/assets/images/preview.png">
 
 <!-- Custom CSS - Load after theme CSS -->
 <link rel="stylesheet" href="{{ '/assets/css/custom.css' | relative_url }}?v={{ site.time | date:'%s' }}">
