--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -1,8 +1,15 @@
 <!-- start custom head snippets -->
 
-<!-- Basic favicon -->
-<link rel="icon" href="/favicon.ico" sizes="any">
-<link rel="icon" type="image/x-icon" href="/favicon.ico">
+<!-- Favicons and App Icons -->
+<link rel="icon" href="/assets/favicons/favicon.ico" sizes="any">
+<link rel="icon" type="image/x-icon" href="/assets/favicons/favicon.ico">
+<link rel="apple-touch-icon" sizes="180x180" href="/assets/favicons/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/assets/favicons/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/assets/favicons/favicon-16x16.png">
+<link rel="manifest" href="/site.webmanifest">
+<meta name="msapplication-TileColor" content="#2b5797">
+<meta name="msapplication-TileImage" content="/assets/favicons/mstile-144x144.png">
+<meta name="theme-color" content="#ffffff">
 
 <!-- Social Media Meta Tags -->
 <!-- Open Graph -->
