--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -1,7 +1,7 @@
 <!-- start custom head snippets -->
 
 <!-- Favicons and App Icons -->
-<link rel="icon" href="/assets/favicons/favicon.ico" sizes="any">
+<link rel="icon" href="/assets/favicons/favicon.ico">
 <link rel="icon" type="image/x-icon" href="/assets/favicons/favicon.ico">
 <link rel="apple-touch-icon" sizes="180x180" href="/assets/favicons/apple-touch-icon.png">
 <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicons/favicon-32x32.png">
